--- a/jatf-live/src/main/resources/jatf/pages/Contact.tml
+++ b/jatf-live/src/main/resources/jatf/pages/Contact.tml
@@ -1,6 +1,21 @@
 <html xmlns:t="http://tapestry.apache.org/schema/tapestry_5_3.xsd" t:type="layout"
       title="Contact"
         >
+<!--
+ This file is part of JATF.
+
+ JATF is free software: you can redistribute it and/or modify
+ it under the terms of the GNU General Public License as published by
+ the Free Software Foundation, version 3 of the License.
+
+ JATF is distributed in the hope that it will be useful,
+ but WITHOUT ANY WARRANTY; without even the implied warranty of
+ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ GNU General Public License for more details.
+
+ You should have received a copy of the GNU General Public License
+ along with JATF.  If not, see <http://www.gnu.org/licenses/>.
+-->
 
 <p>Contact Samuel Eickelberg...</p>
 
