--- a/jatf-live/src/main/resources/jatf/pages/Index.tml
+++ b/jatf-live/src/main/resources/jatf/pages/Index.tml
@@ -2,6 +2,21 @@
       t:type="layout"
       title="Index"
       t:sidebarTitle="Framework Version">
+<!--
+ This file is part of JATF.
+
+ JATF is free software: you can redistribute it and/or modify
+ it under the terms of the GNU General Public License as published by
+ the Free Software Foundation, version 3 of the License.
+
+ JATF is distributed in the hope that it will be useful,
+ but WITHOUT ANY WARRANTY; without even the implied warranty of
+ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ GNU General Public License for more details.
+
+ You should have received a copy of the GNU General Public License
+ along with JATF.  If not, see <http://www.gnu.org/licenses/>.
+-->
 <!-- Most of the page content, including <head>, <body>, etc. tags, comes from Layout.tml -->
 
 <p>${message:greeting}</p>
